@@ -912,6 +912,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9010. Replace NameNode.DEFAULT_PORT with HdfsClientConfigKeys.
     DFS_NAMENODE_RPC_PORT_DEFAULT config key. (Mingliang Liu via wheat9)
 
+    HDFS-9065. Include commas on # of files, blocks, total filesystem objects
+    in NN Web UI. (Daniel Templeton via wheat9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
